Fix password reset email authentication bug - Remove JWT requirement from send-password-reset function - Users requesting password reset are not logged in - Update config.toml to set verify_jwt = false - Remove JWT check from function handler - Add EMAIL_STATUS_CHECK.md documentation

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -16,7 +16,7 @@ verify_jwt = true
 verify_jwt = false
 
 [functions.send-password-reset]
-verify_jwt = true
+verify_jwt = false
 
 [functions.reset-password]
 verify_jwt = false
