--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -38,3 +38,9 @@ verify_jwt = false
 
 [functions.import-texas-hospitals]
 verify_jwt = false
+
+[functions.remove-duplicates]
+verify_jwt = false
+
+[functions.fix-coordinates]
+verify_jwt = false
